--- a/index.html
+++ b/index.html
@@ -4,23 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript 101</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <button onclick="alert('Hello World!')" >Click Me</button> -->
+    
+    <div id="box">Something</div>
+    <button>Dark Mode</button>
 
-    <!-- <button>Click Me</button>
-
-
-    <script>
-        const button = document.querySelector('button');
-
-        button.addEventListener('click', () => {
-            alert('Hello World!');
-        });
-    </script> -->
-
-
-    <!-- <button class="btn">Click Me</button> -->
 
 
     <script src="./index.js"></script>
