--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     
-    <div id="box">Something</div>
-    <button>Dark Mode</button>
+   <form id="loginForm">
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button type="submit">Login</button>
+   </form>
 
+
+   <p id="msg"></p>
 
 
     <script src="./index.js"></script>
